# nanoflann

./: .clang-format  .gitignore  .gitmodules  .travis.sh  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Doxyfile  README.md  README.txt  README_wiki.html  annotated.html  appveyor.yml  classes.html  classnanoflann_1_1CArray-members.html  classnanoflann_1_1CArray.html  classnanoflann_1_1KDTreeBaseClass-members.html  classnanoflann_1_1KDTreeBaseClass.html  classnanoflann_1_1KDTreeSingleIndexAdaptor-members.html  classnanoflann_1_1KDTreeSingleIndexAdaptor.html  classnanoflann_1_1KDTreeSingleIndexDynamicAdaptor-members.html  classnanoflann_1_1KDTreeSingleIndexDynamicAdaptor.html  classnanoflann_1_1KDTreeSingleIndexDynamicAdaptor__-members.html  classnanoflann_1_1KDTreeSingleIndexDynamicAdaptor__.html  classnanoflann_1_1KNNResultSet-members.html  classnanoflann_1_1KNNResultSet.html  classnanoflann_1_1PooledAllocator-members.html  classnanoflann_1_1PooledAllocator.html  classnanoflann_1_1RadiusResultSet-members.html  classnanoflann_1_1RadiusResultSet.html  codecov.yml  configure  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  group__kdtrees__grp.html  (+59 more)
.circleci/: check_style.sh  clang_format_codebase.sh  config.yml  python_reqs.txt
.circleci/clang_git_format/: .gitignore  README.md  format_code.py
.circleci/clang_git_format/clang_git_format/: __init__.py  clang_format.py  config.py  custom_exceptions.py  repo.py  utils.py
.circleci/clang_git_format/scripts/: convert_inline_dox_comments_file.sh
.github/workflows/: check-clang-format.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
benchmarkTool/: CMakeLists.txt  tool.py
benchmarkTool/randomTests/: CMakeLists.txt  benchmark_fastann_random.cpp  benchmark_flann_random.cpp  benchmark_libkdtree_random.cpp  benchmark_nanoflann_random.cpp  fastann_testRandom.cpp  flann_testRandom.cpp  generatePlots_testRandom.py  libkdtree_testRandom.cpp  nanoflann_testRandom.cpp  randomTests.py
benchmarkTool/realTests/: .benchmark.cpp.swp  CMakeLists.txt  benchmark.cpp  benchmark_fastann_real.cpp  benchmark_flann_real.cpp  benchmark_libkdtree_real.cpp  benchmark_nanoflann_real.cpp  fastann_test.cpp  fastann_testReal.cpp  flann_test.cpp  flann_testReal.cpp  generatePlots_testReal.py  libkdtree_testReal.cpp  nanoflann_test.cpp  nanoflann_testReal.cpp  realTests.py
examples/: CMakeLists.txt  InnerProdQuat_adaptor_example.cpp  KDTreeVectorOfVectorsAdaptor.h  SO2_adaptor_example.cpp  SO3_InnerProdQuat_adaptor_example.cpp  SO3_acosInnerProdQuat_adaptor_example.cpp  SO3_adaptor_example.cpp  acosInnerProdQuat_adaptor_example.cpp  dynamic_pointcloud_example.cpp  matrix_example.cpp  pointcloud_adaptor_example.cpp  pointcloud_custom_metric.cpp  pointcloud_custom_resultset.cpp  pointcloud_example.cpp  pointcloud_kdd_radius.cpp  quaternion_example.cpp  saveload_example.cpp  utils.h  vector_of_vectors_example.cpp
examples/example_with_cmake/: CMakeLists.txt  pointcloud_example.cpp
examples/example_with_pkgconfig/: Makefile  pointcloud_example.cpp
examples/examples_gui/: CMakeLists.txt  README.md
examples/examples_gui/nanoflann_gui_example_R3/: CMakeLists.txt  nanoflann_gui_example_R3.cpp
examples/examples_gui/nanoflann_gui_example_SO2/: CMakeLists.txt  nanoflann_gui_example_SO2.cpp
examples/examples_gui/nanoflann_gui_example_bearings/: CMakeLists.txt  nanoflann_gui_example_bearings.cpp
include/: nanoflann.hpp  nanoflann2.hpp
packaging/: README.txt
packaging/debian/: changelog  control  copyright  libnanoflann-dev.install  rules
perf-tests/: README.txt  analyze_leafsize_stats.m  analyze_stats.m  stats_raw_results-26_aug_2011.tar.bz
perf-tests/flann/: Makefile  test_flann.cpp
perf-tests/nanoflann/: Makefile  test_leaf_max_size.cpp  test_nanoflann.cpp
scripts/: formatter.sh  nanoflann.pc.in  nanoflannConfig.cmake.in  nanoflannConfigVersion.cmake.in  prepare_debian.sh  prepare_release.sh  prepare_ubuntu_pkgs_for_ppa.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  (+25 more)
tests/: CMakeLists.txt  test_main.cpp
tests/gtest-1.6.0/: CMakeLists.txt
tests/gtest-1.7.0/include/gtest/internal/: gtest-port.h
tests/gtest-1.8.0/: CMakeLists.txt
